JCodeGen generates code which handles 10k trees.
Internal classes were moved into upper level (the same level
as a model class). Hence model class does not need
to preserve references to its inner classes in its constant poool.
:)